@@ -1,3 +1,4 @@
+0.12.3-0 @10/06/2003 17:30:00 UTC@
 0.12.2-0 @08/16/2003 20:40:00 UTC@
 0.12.1-0 @08/15/2003 16:33:49 UTC@
 0.12.0-0 @07/11/2003 00:30:00 UTC@
